[package]
name = "substrate-test-utils"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Substrate test utilities"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = { version = "0.3.1", features = ["compat"] }
substrate-test-utils-derive = { version = "0.8.0", path = "./derive" }
tokio = { version = "0.2.13", features = ["macros"] }

[dev-dependencies]
sc-service = { version = "0.8.0", path = "../client/service" }
trybuild = { version = "1.0", features = ["diff"] }
