[package]
name = "sc-state-db"
version = "0.8.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "State database maintenance. Handles canonicalization and pruning in the database."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parking_lot = "0.10.0"
log = "0.4.8"
sc-client-api = { version = "2.0.0", path = "../api" }
sp-core = { version = "2.0.0", path = "../../primitives/core" }
codec = { package = "parity-scale-codec", version = "1.3.4", features = ["derive"] }
parity-util-mem = { version = "0.7.0", default-features = false, features = ["primitive-types"] }
parity-util-mem-derive = "0.1.0"
