[package]
name = "sp-allocator"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Collection of allocator implementations."
documentation = "https://docs.rs/sp-allocator"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-std = { version = "2.0.0", path = "../std", default-features = false }
sp-core = { version = "2.0.0", path = "../core", default-features = false }
sp-wasm-interface = { version = "2.0.0", path = "../wasm-interface", default-features = false }
log = { version = "0.4.8", optional = true }
derive_more = { version = "0.99.2", optional = true }

[features]
default = [ "std" ]
std = [
	"sp-std/std",
	"sp-core/std",
	"sp-wasm-interface/std",
	"log",
	"derive_more",
]
