[package]
name = "sp-api"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Substrate runtime api primitives"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }
sp-api-proc-macro = { version = "2.0.0", path = "proc-macro" }
sp-core = { version = "2.0.0", default-features = false, path = "../core" }
sp-std = { version = "2.0.0", default-features = false, path = "../std" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../runtime" }
sp-version = { version = "2.0.0", default-features = false, path = "../version" }
sp-state-machine = { version = "0.8.0", optional = true, path = "../../primitives/state-machine" }
hash-db = { version = "0.15.2", optional = true }

[dev-dependencies]
sp-test-primitives = { version = "2.0.0", path = "../test-primitives" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"sp-state-machine",
	"sp-version/std",
	"hash-db",
]
