[package]
name = "sp-authorship"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
description = "Authorship primitives"
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-inherents = { version = "2.0.0", default-features = false, path = "../inherents" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../runtime" }
sp-std = { version = "2.0.0", default-features = false, path = "../std" }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"sp-std/std",
	"sp-inherents/std",
	"sp-runtime/std",
]
