[package]
name = "sp-chain-spec"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Substrate chain configurations types."
readme = "README.md"

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
