[package]
name = "sp-database"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Substrate database trait."
documentation = "https://docs.rs/sp-database"
readme = "README.md"

[dependencies]
parking_lot = "0.10.0"
kvdb = "0.7.0"
