[package]
name = "sp-debug-derive"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Macros to derive runtime debug implementation."
documentation = "https://docs.rs/sp-debug-derive"


[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.3"
syn = "1.0.7"
proc-macro2 = "1.0"

[features]
std = []

[dev-dependencies]
