[package]
name = "sp-externalities"
version = "0.8.0"
license = "Apache-2.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Substrate externalities abstraction"
documentation = "https://docs.rs/sp-externalities"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-storage = { version = "2.0.0", path = "../storage", default-features = false }
sp-std = { version = "2.0.0", path = "../std", default-features = false }
environmental = { version = "1.1.2", default-features = false }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"environmental/std",
	"sp-std/std",
	"sp-storage/std",
]
