[package]
name = "sp-inherents"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Provides types and traits for creating and checking inherents."
documentation = "https://docs.rs/sp-inherents"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
parking_lot = { version = "0.10.0", optional = true }
sp-std = { version = "2.0.0", default-features = false, path = "../std" }
sp-core = { version = "2.0.0", default-features = false, path = "../core" }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21", optional = true }

[features]
default = [ "std" ]
std = [
	"parking_lot",
	"sp-std/std",
	"codec/std",
	"sp-core/std",
	"thiserror",
]
