[package]
name = "sp-keyring"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Keyring support code for the runtime. A set of test accounts."
documentation = "https://docs.rs/sp-keyring"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]


[dependencies]
sp-core = { version = "2.0.0", path = "../core" }
sp-runtime = { version = "2.0.0", path = "../runtime" }
lazy_static = "1.4.0"
strum = { version = "0.16.0", features = ["derive"] }
