[package]
name = "sp-panic-handler"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Custom panic hook with bug report link"
documentation = "https://docs.rs/sp-panic-handler"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
backtrace = "0.3.38"
log = "0.4.8"
