[package]
name = "sp-rpc"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Substrate RPC primitives and utilities."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
sp-core = { version = "2.0.0", path = "../core" }

[dev-dependencies]
serde_json = "1.0.41"
