[package]
name = "sp-serializer"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Substrate customizable serde serializer."
documentation = "https://docs.rs/sp-serializer"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = "1.0.101"
serde_json = "1.0.41"
