[package]
name = "sp-test-primitives"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-application-crypto = { version = "2.0.0", default-features = false, path = "../application-crypto" }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
sp-core = { version = "2.0.0", default-features = false, path = "../core" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-runtime = { version = "2.0.0", default-features = false, path = "../runtime" }
parity-util-mem = { version = "0.7.0", default-features = false, features = ["primitive-types"] }

[features]
default = [
	"std",
]
std = [
	"sp-application-crypto/std",
	"serde",
]
