[package]
name = "sp-utils"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "I/O for Substrate runtimes"
readme = "README.md"

[dependencies]
futures = "0.3.4"
futures-core = "0.3.4"
lazy_static = "1.4.0"
prometheus = { version = "0.10.0", default-features = false }
futures-timer = "3.0.2"

[features]
default = ["metered"]
metered = []
