[package]
name = "substrate-test-utils-derive"
version = "0.8.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Substrate test utilities macros"

[dependencies]
quote = "1.0.6"
syn = { version = "1.0.33", features = ["full"] }
proc-macro-crate = "0.1.4"

[lib]
proc-macro = true
