[package]
name = "substrate-test-utils-test-crate"
version = "0.1.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
tokio = { version = "0.2.13", features = ["macros"] }
test-utils = { version = "2.0.0", path = "..", package = "substrate-test-utils" }
sc-service = { version = "0.8.0", path = "../../client/service" }
