[package]
name = "substrate-wasm-builder-runner"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
description = "Runner for substrate-wasm-builder"
edition = "2018"
readme = "README.md"
repository = "https://github.com/abelbeertech/abel-bkchain"
license = "Apache-2.0"
homepage = "http://www.abel.beer"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
