[package]
name = "sc-chain-spec-derive"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Macros to derive chain spec extension traits implementation."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
proc-macro-crate = "0.1.4"
proc-macro2 = "1.0.6"
quote = "1.0.3"
syn = "1.0.7"

[dev-dependencies]
