[package]
name = "sc-consensus"
version = "0.8.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Collection of common consensus specific imlementations for Substrate (client)"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sc-client-api = { version = "2.0.0", path = "../../api" }
sp-blockchain = { version = "2.0.0", path = "../../../primitives/blockchain" }
sp-runtime = { version = "2.0.0", path = "../../../primitives/runtime" }
sp-consensus = { version = "0.8.0", path = "../../../primitives/consensus/common" }
