[package]
name = "pallet-staking-reward-curve"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Reward Curve for FRAME staking pallet"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.7", features = ["full", "visit"] }
quote = "1.0.3"
proc-macro2 = "1.0.6"
proc-macro-crate = "0.1.4"

[dev-dependencies]
sp-runtime = { version = "2.0.0", path = "../../../primitives/runtime" }
