[package]
name = "frame-support-procedural"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "Proc macro of Support code for the runtime."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
proc-macro = true

[dependencies]
frame-support-procedural-tools = { version = "2.0.0", path = "./tools" }
proc-macro2 = "1.0.6"
quote = "1.0.3"
syn = { version = "1.0.7", features = ["full"] }

[features]
default = ["std"]
std = []
