[package]
name = "frame-system-benchmarking"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
license = "Apache-2.0"
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"
description = "FRAME System benchmarking"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }
sp-std = { version = "2.0.0", default-features = false, path = "../../../primitives/std" }
sp-runtime = { version = "2.0.0", default-features = false, path = "../../../primitives/runtime" }
frame-benchmarking = { version = "2.0.0", default-features = false, path = "../../benchmarking" }
frame-system = { version = "2.0.0", default-features = false, path = "../../system" }
frame-support = { version = "2.0.0", default-features = false, path = "../../support" }
sp-core = { version = "2.0.0", default-features = false, path = "../../../primitives/core" }

[dev-dependencies]
serde = { version = "1.0.101" }
sp-io ={ version = "2.0.0", path = "../../../primitives/io" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-system/std",
	"frame-support/std",
	"sp-core/std",
]
