[package]
name = "sp-application-crypto-test"
version = "2.0.0"
authors = ["Abel Technologies abelbeertech@outlook.com"]
edition = "2018"
description = "Integration tests for application-crypto"
license = "Apache-2.0"
publish = false
homepage = "http://www.abel.beer"
repository = "https://github.com/abelbeertech/abel-bkchain"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { version = "2.0.0", default-features = false, path = "../../core" }
sp-keystore = { version = "0.8.0", path = "../../keystore" }
substrate-test-runtime-client = { version = "2.0.0", path = "../../../test-utils/runtime/client" }
sp-runtime = { version = "2.0.0", path = "../../runtime" }
sp-api = { version = "2.0.0", path = "../../api" }
sp-application-crypto = { version = "2.0.0", path = "../" }
